# data-quality-pipeline

./: .env.example  .gitignore  LICENSE  README.md  architecture.md  environment.yml  pyproject.toml  requirements.txt
configs/: config.yaml  logging.yaml
data/samples/: generate_samples.py
docs/: architecture.md  dashboard.html  pipeline_steps.md
notebooks/: 01_data_understanding.ipynb  02_quality_analysis.ipynb
reports/: build_dashboard.py  generate_figures.py
sql/: quality_checks.sql  schema.sql  staging.sql
src/ingestion/: ingest.py
src/monitoring/: anomaly_detection.py  quality_checks.py  reporting.py
src/pipelines/: run_pipeline.py
src/processing/: clean_customers.py  clean_transactions.py  transform.py
src/utils/: config.py  logger.py  paths.py
src/validation/: schema_checks.py
src/warehouse/: db.py  load.py
tests/: conftest.py  run_tests.py  test_ingestion.py  test_monitoring.py  test_processing.py  test_validation.py  test_warehouse.py
